Labs/02 Traffic Management/02 dark launch/02_reviews-v2-virtualservice-testuser-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: testuser    
    fault:
      delay:
        percent: 100
        fixedDelay: 2.5s
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
