Labs/02 Traffic Management/02 dark launch/03_reviews-v2-virtualservice-testuser-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: testuser    
    fault:
      abort:
        httpStatus: 503
        percentage:
          value: 75
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
